# RustBot

./: .gitignore  Cargo.toml  README.md
ArtGenerator/: Cargo.toml
ArtGenerator/src/: main.rs
ArtGenerator/src/BasicShapes/: Elipse.rs  Rectangle.rs  Square.rs
GCodeRenderLib/: Cargo.toml
GCodeRenderLib/src/: defs.rs  file_loader.rs  gcode_parser.rs  image_data.rs  lib.rs  quadrant.rs
GCodeRenderer/: Cargo.toml  config  test.gcode
GCodeRenderer/src/: arguments.rs  defs.rs  main.rs  master_img.rs  rasterizer.rs
Robot/: BOM.txt
Robot/Driver/: Cargo.toml
Robot/Driver/example-gcode/: test001.gcode
Robot/Driver/src/: main.rs  motor.rs  robot.rs  tmc2208.rs  uart.rs
Robot/Driver/src/parser/: gcode.rs
Robot/Driver/src/tmc2208/: chopper_configuration.rs  driver_status.rs  otp_configuration.rs  register_defs.rs  stealthchop_configuration.rs  tmc2208.rs  tmc_packet.rs
Robot/Driver/src/translator/: gcode_translator.rs
Robot/Models_And_Parts/: BOM.txt
Slicer/: Cargo.toml  config.json
Slicer/src/: GCode.rs  Machine.rs  Postprocessor.rs  Scalar.rs  Slicer-workspace.code-workspace  Translator.rs  TranslatorUtil.rs  Util.rs  arguments.rs  main.rs  preprocessor.rs
Slicer/src/parser/: SVGParser.rs  parser_defs.rs  path.rs  path_defs.rs  polygon.rs  rect.rs  regex_defs.rs  svg.rs  svg_util.rs
Slicer/src/parser/svg_commands/: bezier.rs  eliptical_arcs.rs  line.rs
UI/: Cargo.toml
UI/src/: main.rs
UI/src/support/: mod.rs
src/: Shape.rs  main.rs
src/BasicShapes/: Square.rs
