[package]
name = "GCodeRenderer"
version = "0.1.0"
authors = ["Austin <ahaskell@carthage.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
png = "0.16.8"
indicatif = "0.15.0"
threadpool = "1.8.1"
string-builder = "0.2.0"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.62"