[package]
name = "first-imgui-app"
version = "0.1.0"
authors = ["Austin Haskell <austinoliverhaskell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = { version = "0.29", default-features = true }
image = "0.23"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-winit-support = "0.7.0"
winit = "0.24.0"